--- a/trunk/.project
+++ b/trunk/.project
@@ -3,6 +3,7 @@
 	<name>Geo</name>
 	<comment></comment>
 	<projects>
+		<project>Common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -30,4 +31,11 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Common</name>
+			<type>2</type>
+			<locationURI>_android_Common/src</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
