Initial upgrade feature. Adds the following:
- User interface via styles and rows
- Raw image resources for icons
- Classes to keep track of current upgrades and to handle upgrade requests
- Wires in upgrades into the player ship

--- a/tests/.project
+++ b/tests/.project
@@ -3,6 +3,7 @@
 	<name>GeoTest</name>
 	<comment></comment>
 	<projects>
+		<project>Common</project>
 		<project>Geo</project>
 	</projects>
 	<buildSpec>
