--- a/default.properties
+++ b/default.properties
@@ -9,5 +9,6 @@
 
 # Project target.
 target=android-7
+android.library.reference.1=../Common/
 # Indicates whether an apk should be generated for each density.
 split.density=false
